Modif view and xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">toDoList</string>
-    <string name="titre_app">Exo todolist</string>
+    <!-- <string name="titre_app">Appli Tasklist - LPW - Abdelhadim</string> -->
 </resources>
